# dragon-dev-companion

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/cli/: main.py
apps/tui/: __init__.py  app.py
assets/: ascii_dragon.txt
ddc-desktop/: README.md
ddc-desktop/backend/: pyproject.toml
ddc-desktop/backend/app/: __init__.py  db.py  main.py  models.py
ddc-desktop/backend/app/services/: __init__.py  git_service.py  github_service.py  pomodoro_service.py  readme_service.py  spotify_service.py  task_service.py  vscode_service.py
ddc-desktop/backend/app/utils/: __init__.py  path_utils.py  time_utils.py
ddc-desktop/backend/tests/: conftest.py  test_pomodoro.py  test_readme.py  test_tasks.py  test_vscode.py
ddc-desktop/frontend/: index.html  package-lock.json  package.json
ddc-desktop/frontend/src/: App.jsx  api.js  styles.css
ddc-desktop/scripts/: dev.ps1  launch.cmd  launch.ps1  run.ps1  setup.ps1
ddc-desktop/vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
ddc-desktop/vscode-extension/src/: extension.ts
docs/: SPEC.md
examples/: github_profile.sample.json
modules/: __init__.py
modules/focus_den/: __init__.py  core.py
modules/project_roost/: __init__.py  core.py
modules/repo_forge/: __init__.py  core.py  templates.py
scripts/: setup.ps1  smoke.ps1
tests/: test_repo_forge.py  test_storage.py
