[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-dev-companion"
version = "0.1.0"
description = "Dragon Dev Companion (DDC) - a dragon-themed developer companion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
ddc = "apps.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "modules*", "packages*"]
